feat: add comprehensive documentation on OutOfMemoryError and multi-threading concepts